[package]
name = "embassy"
version = "0.2.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "task-arena-size-32768"] }
embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.0", package = "embassy-time", git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb-logger = "0.2.0"
log = "0.4.21"
panic-probe = "0.3.2"
embassy-net = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-net", features = ["proto-ipv4", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embedded-io-async = "0.6.1"
cyw43-pio = { package = "cyw43-pio", git = "https://github.com/embassy-rs/embassy.git" }
cyw43 = { package = "cyw43", git = "https://github.com/embassy-rs/embassy.git" }
heapless = "0.8.0"